--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,15 @@
 		font-size: 2em;
 		color: #323338;
 	}
+	header h3
+	{
+		letter-spacing: -1px;
+		text-transform: uppercase;
+		font-weight: 900;
+		font-size: 1.5em;
+		color: #323328;
+		margin-top: 2em; 
+	}
 
 	header .byline
 	{
@@ -565,6 +574,20 @@ caption {
 th {
    background: #eee;
 }
+ol.lista {
+  counter-reset: li;
+  list-style: none;
+  color: #525252;
+  margin: 20px;
+  padding: 0px 0px 0px 0px;
+}
+ol.lista > li:before {
+  counter-increment: li;
+  content: counter(li) ' ';
+  color: black;
+  font-size: 2em;
+}
+
 /** LIST STYLE 1 */
 
 ul.style1 {
