--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -44,6 +44,7 @@
 			text-transform: uppercase;
 			font-size: 4em;
 			font-weight: 900;
+			font-style: italic;
 			color: #323338;
 		}
 
@@ -54,7 +55,7 @@
 			letter-spacing: 1px;
 			text-transform: uppercase;
 			font-size: 1.2em;
-			color: #8e8588;
+			color: #323338;
 		}			
 			
 
@@ -84,7 +85,7 @@
 				letter-spacing: 1px;
 				text-decoration: none;
 				text-transform: uppercase;
-				font-weight: 200;
+				font-weight: 800;
 				font-size: 1em;
 				outline: 0;
 				color: #323338;
